Add Neo intro overlay

--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
   <link rel="stylesheet" href="music.css">
   <link rel="stylesheet" href="matrix-effects.css">
   <link rel="stylesheet" href="crt.css">
+  <link rel="stylesheet" href="neo.css">
 </head>
-<body data-rain-fixed="1">
+<body data-rain-fixed="1" data-neo="wake">
 
   <!-- 1) Canvas muss in den BODY, nicht ins CSS -->
   <canvas id="rain"></canvas>
@@ -153,5 +154,6 @@
   <script src="music.js"></script>
   <script src="view.js"></script>
   <script src="crt.js"></script>
+  <script src="neo.js"></script>
 </body>
 </html>
