--- a/statistik.html
+++ b/statistik.html
@@ -86,8 +86,9 @@ a:hover{
   <link rel="stylesheet" href="music.css">
   <link rel="stylesheet" href="matrix-effects.css">
   <link rel="stylesheet" href="crt.css">
+  <link rel="stylesheet" href="neo.css">
 </head>
-<body>
+<body data-neo="wake">
   <canvas id="rain"></canvas>
   <nav class="home-only">
     <a href="index.html" class="home">Schreibtisch</a>
@@ -144,5 +145,6 @@ a:hover{
   <script src="music.js"></script>
   <script src="view.js"></script>
   <script src="crt.js"></script>
+  <script src="neo.js"></script>
 </body>
 </html>
