--- a/white-rabbit.html
+++ b/white-rabbit.html
@@ -93,8 +93,9 @@
   <link rel="stylesheet" href="music.css">
   <link rel="stylesheet" href="matrix-effects.css">
   <link rel="stylesheet" href="crt.css">
+  <link rel="stylesheet" href="neo.css">
 </head>
-<body class="white-rabbit">
+<body class="white-rabbit" data-neo="knock">
   <canvas id="rain"></canvas>
 
   <nav class="home-only">
@@ -199,5 +200,6 @@
   <script src="music.js"></script>
   <script src="view.js"></script>
   <script src="crt.js"></script>
+  <script src="neo.js"></script>
 </body>
 </html>
