--- a/elektrotechnik/elektrotechnik.html
+++ b/elektrotechnik/elektrotechnik.html
@@ -91,8 +91,9 @@ a:hover{
   <link rel="stylesheet" href="../music.css">
   <link rel="stylesheet" href="../matrix-effects.css">
   <link rel="stylesheet" href="../crt.css">
+  <link rel="stylesheet" href="../neo.css">
 </head>
-<body>
+<body data-neo="wake">
   <canvas id="rain"></canvas>
   <nav class="home-only">
   <a href="../index.html" class="home">← Schreibtisch</a>
@@ -186,5 +187,6 @@ a:hover{
   <script src="../music.js"></script>
   <script src="../view.js"></script>
   <script src="../crt.js"></script>
+  <script src="../neo.js"></script>
 </body>
 </html>
