Limit Neo intro and adjust TOC tab position

--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -183,7 +183,7 @@
   <link rel="stylesheet" href="../crt.css">
   <link rel="stylesheet" href="../neo.css">
 </head>
-<body data-neo="wake">
+<body>
   <canvas id="rain"></canvas>
   <nav class="home-only">
     <a href="../statistik.html" class="home">← Statistik</a>
