--- a/statistik.html
+++ b/statistik.html
@@ -88,7 +88,7 @@ a:hover{
   <link rel="stylesheet" href="crt.css">
   <link rel="stylesheet" href="neo.css">
 </head>
-<body data-neo="wake">
+<body>
   <canvas id="rain"></canvas>
   <nav class="home-only">
     <a href="index.html" class="home">Schreibtisch</a>
