--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -347,7 +347,7 @@ von diesem Effekt betroffen).</p></li>
   </tr>
   <p>(Die Internale Validität steigt mit zunehmendem Evidenzlevel).</p>
 </p>
-
+<p></p>
   
 <h2 id="wissenschaftliche-methode">Wissenschaftliche Methode</h2>
 
@@ -367,14 +367,14 @@ von diesem Effekt betroffen).</p></li>
 
 
 
-<p><strong>Es gibt zwei Säulen der wissenschaftlichen Methode:</strong></p>
+<p><strong>Die wissenschaftliche Methode teilt sich auf in zwei Säulen:</strong></p>
 <p></p>
 <table class="legend-table" style="--key-col: 50%;">
     <thead>
-      <tr><th>Key</th><th>Aktion</th></tr>
+      <tr><th>Empirie</th><th>Logik</th></tr>
     </thead>
     <tbody>
-      <tr><td><code>A</code></td><td>Zum nächsten Abschnitt springen</td></tr>
+      <tr><td></td><td>Zum nächsten Abschnitt springen</td></tr>
       <tr><td><code>B</code></td><td>Lesezeichen setzen</td></tr>
     </tbody>
 </table>
