--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -343,7 +343,7 @@ von diesem Effekt betroffen).</p></li>
   </tr>
   <tr>
     <td>Expertenmeinung</td>
-
+</table>
   </tr>
   <p>(Die Internale Validität steigt mit zunehmendem Evidenzlevel).</p>
 </p>
@@ -398,7 +398,7 @@ von diesem Effekt betroffen).</p></li>
     let lastPos = null;
     let isDismissed = false;
 
-    // merkt sich Quelle+Ziel, wenn du auf einen Wiki-Link klickst
+    // merkt sich Quelle+Ziel, wenn man auf einen Wiki-Link klickt
     document.addEventListener("click", (e) => {
       const close = e.target.closest("#auto-back .close");
       if (close) {
