--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -375,11 +375,14 @@ von diesem Effekt betroffen).</p></li>
       <tr><th>Empirie</th><th>Logik</th></tr>
     </thead>
     <tbody>
-      <tr><td></td><td>Zum nächsten Abschnitt springen</td></tr>
-      <tr><td><code>B</code></td><td>Lesezeichen setzen</td></tr>
+      <tr><td>Auf Erfahrung beruhend</td><td>Auf systematischen (hypothesengeleiteten) 
+        Auswertungen von Erfahrung beruhend</td></tr>
+      
+        <tr><td>Wiederholbarkeit/Replizierbarkeit von Beobachtungen</td><td>-</td></tr>
+
+        <tr><td>Operationale Definitionen: Mess- und Herstellungsregeln für Variablen</td><td>-</td></tr>
     </tbody>
 </table>
-
 
 
     <table class="legend-table">
