--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -385,15 +385,37 @@ von diesem Effekt betroffen).</p></li>
 </table>
 
 
-    <table class="legend-table">
+<h2 id="empirie">Empirie</h2>
+
+<p></p>
+<ul>
+<li>Wissenschaftliche <strong>Beobachtungen</strong> und <strong>Experiment</strong> liegen 
+  an entgegengesetzten Polen.</li>
+<li>Wissenschaftliche Beobachtung zielt auf die unbeeinflusste Feststellung und 
+  Beschreibung <strong>empirischer Phänomene</strong> (Was und Wann?).</li> 
+ <li>Wissenschaftliche Beobachtung zielt auf Generierung von Hypothesen 
+  über Ursache-Wirkungs-Beziehungen.</li>
+<li>Experimente zielen auf die Prüfung von Hypothesen (Warum oder wie?).</li>
+<li>Im Experiment werden <strong>empirische Phänomene</strong> durch systematische Variation von 
+  Bedingungen erzeugt.</li>
+</ul>
+
+<p>Bei einem Experiment gibt es eine abhängige Variable und (mindestens) eine unabhängige 
+  Variable:</p>
+</p>
+<table class="legend-table" style="--key-col: 50%;">
     <thead>
-      <tr><th>Key</th><th>Aktion</th></tr>
+      <tr><th>Unabhängige Variable (UV)</th><th>Abhängige Variable (AV)</th></tr>
     </thead>
     <tbody>
-      <tr><td><code>A</code></td><td>Zum nächsten Abschnitt springen</td></tr>
-      <tr><td><code>B</code></td><td>Lesezeichen setzen</td></tr>
+      <tr><td>Auf Erfahrung beruhend</td><td>Auf systematischen (hypothesengeleiteten) 
+        Auswertungen von Erfahrung beruhend</td></tr>
+      
+        <tr><td>Wiederholbarkeit/Replizierbarkeit von Beobachtungen</td><td>-</td></tr>
+
+        <tr><td>Operationale Definitionen: Mess- und Herstellungsregeln für Variablen</td><td>-</td></tr>
     </tbody>
-  </table>
+</table>
     
   </main>
 
