--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -399,7 +399,7 @@ von diesem Effekt betroffen).</p></li>
 <li>Im Experiment werden <strong>empirische Phänomene</strong> durch systematische Variation von 
   Bedingungen erzeugt.</li>
 </ul>
-
+<p></p>
 <p>Bei einem Experiment gibt es eine abhängige Variable und (mindestens) eine unabhängige 
   Variable:</p>
 </p>
@@ -408,14 +408,20 @@ von diesem Effekt betroffen).</p></li>
       <tr><th>Unabhängige Variable (UV)</th><th>Abhängige Variable (AV)</th></tr>
     </thead>
     <tbody>
-      <tr><td>Auf Erfahrung beruhend</td><td>Auf systematischen (hypothesengeleiteten) 
-        Auswertungen von Erfahrung beruhend</td></tr>
+      <tr><td><i>Prädiktor</i><br><i>Erklärende Variable</i></br><br><i>Independent Variable</i></br></td><td><i>Antwortvariable
+        </i><br><i>Dependent Variable</i></br>
+      </i></td></tr>
       
         <tr><td>Wiederholbarkeit/Replizierbarkeit von Beobachtungen</td><td>-</td></tr>
 
         <tr><td>Operationale Definitionen: Mess- und Herstellungsregeln für Variablen</td><td>-</td></tr>
     </tbody>
 </table>
+
+<p>
+
+
+</p>
     
   </main>
 
