Update statistik allgemeines formatting

--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -408,8 +408,8 @@ von diesem Effekt betroffen).</p></li>
       <tr><th>Unabhängige Variable (UV)</th><th>Abhängige Variable (AV)</th></tr>
     </thead>
     <tbody>
-      <tr><td><i>Prädiktor</i><br><i>Erklärende Variable</i></br><br><i>Independent Variable</i></br></td><td><i>Antwortvariable
-        </i><br><i>Dependent Variable</i></br>
+      <tr><td><i>Prädiktor</i><br><i>Erklärende Variable</i><br><i>Independent Variable</i></td><td><i>Antwortvariable
+        </i><br><i>Dependent Variable</i><br><i>Response Variable</i>
       </i></td></tr>
       
         <tr><td>Wiederholbarkeit/Replizierbarkeit von Beobachtungen</td><td>-</td></tr>
