--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -408,11 +408,14 @@ von diesem Effekt betroffen).</p></li>
       <tr><th>Unabhängige Variable (UV)</th><th>Abhängige Variable (AV)</th></tr>
     </thead>
     <tbody>
-      <tr><td><i>Prädiktor</i><br><i>Erklärende Variable</i><br><i>Independent Variable</i></td><td><i>Antwortvariable
-        </i><br><i>Dependent Variable</i><br><i>Response Variable</i>
-      </i></td></tr>
+      <tr><td><i>Prädiktor</i><br><i>Erklärende Variable</i><br><i>Independent Variable</i><br></td><td><i>Antwortvariable
+        </i><br><i>Dependent Variable</i><br><i>Response Variable</i><br>
+      </td></tr>
       
-        <tr><td>Wiederholbarkeit/Replizierbarkeit von Beobachtungen</td><td>-</td></tr>
+        <tr><td>Zu untersuchende Einflussgröße (potentielle Ursache)<br><ul><li><i>Gruppenbildung</i></9></li></ul></td><td>Werte 
+          (Beobachtungen, Messungen), die erklärt werden sollen<br><ul><li><i></i>Wirkung</i></li>
+            <li><i>Effekte</i></li></ul>
+        </td></tr>
 
         <tr><td>Operationale Definitionen: Mess- und Herstellungsregeln für Variablen</td><td>-</td></tr>
     </tbody>
