Refine statistik allgemeines content

--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -413,11 +413,15 @@ von diesem Effekt betroffen).</p></li>
       </td></tr>
       
         <tr><td>Zu untersuchende Einflussgröße (potentielle Ursache)<br><ul><li><i>Gruppenbildung</i></9></li></ul></td><td>Werte 
-          (Beobachtungen, Messungen), die erklärt werden sollen<br><ul><li><i></i>Wirkung</i></li>
+          (Beobachtungen, Messungen), die erklärt werden sollen<br><ul><li><i>Wirkung</i></li>
             <li><i>Effekte</i></li></ul>
-        </td></tr>
 
-        <tr><td>Operationale Definitionen: Mess- und Herstellungsregeln für Variablen</td><td>-</td></tr>
+            <tr><td>Mindestens zwei Ausprägungen<br><ul><li><i>Eine Treatment- und eine Kontrollgruppe
+              </i></li><li><i>In der Testgruppe ist die Einflussgröße vorhanden, 
+                in der Kontrollgruppe nicht</i></li></ul></td></tr>
+                <td>Unbeeinflusste Messung<br><ul><li><i>Werte sollen frei variieren können und 
+                  unabhängig von den Durchführungen des Experiments sein</i></li></ul></td>
+        </td></tr>
     </tbody>
 </table>
 
