--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -405,14 +405,23 @@ von diesem Effekt betroffen).</p></li>
 </p>
 <table class="legend-table" style="--key-col: 50%;">
     <thead>
-      <tr><th>Unabhängige Variable (UV)</th><th>Abhängige Variable (AV)</th></tr>
+      <tr><th>Unabhängige Variable (UV)</th>
+        <th>Abhängige Variable (AV)</th></tr>
     </thead>
+
     <tbody>
-      <tr><td><i>Prädiktor</i><br><i>Erklärende Variable</i><br><i>Independent Variable</i><br></td><td><i>Antwortvariable
-        </i><br><i>Dependent Variable</i><br><i>Response Variable</i><br>
+      <tr><td><i>Prädiktor</i><br>
+              <i>Erklärende Variable</i><br>
+              <i>Independent Variable</i><br>
+            </td>
+        
+      <td><i>Antwortvariable</i><br>
+              <i>Dependent Variable</i><br>
+              <i>Response Variable</i><br>
       </td></tr>
       
-        <tr><td>Zu untersuchende Einflussgröße (potentielle Ursache)<br><ul><li><i>Gruppenbildung</i></9></li></ul></td><td>Werte 
+      <tr><td>Zu untersuchende Einflussgröße (potentielle Ursache)<br>
+                <ul><li><i>Gruppenbildung</i></li></ul></td><td>Werte 
           (Beobachtungen, Messungen), die erklärt werden sollen<br><ul><li><i>Wirkung</i></li>
             <li><i>Effekte</i></li></ul>
 
