--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -410,24 +410,31 @@ von diesem Effekt betroffen).</p></li>
     </thead>
 
     <tbody>
-      <tr><td><i>Prädiktor</i><br>
+
+  <tr><td><i>Prädiktor</i><br>
               <i>Erklärende Variable</i><br>
               <i>Independent Variable</i><br>
             </td>
-        
       <td><i>Antwortvariable</i><br>
               <i>Dependent Variable</i><br>
               <i>Response Variable</i><br>
-      </td></tr>
+    </td></tr>
       
-      <tr><td>Zu untersuchende Einflussgröße (potentielle Ursache)<br>
-                <ul><li><i>Gruppenbildung</i></li></ul></td><td>Werte 
-          (Beobachtungen, Messungen), die erklärt werden sollen<br><ul><li><i>Wirkung</i></li>
-            <li><i>Effekte</i></li></ul>
+  <tr><td>Zu untersuchende Einflussgröße (potentielle Ursache)<br>
+                <ul><li><i>Gruppenbildung</i></li></ul></td>
+      <td>Werte (Beobachtungen, Messungen), die erklärt werden sollen<br>
+                <ul><li><i>Wirkung</i></li>
+                    <li><i>Effekte</i></li>
+                </ul>
+    </td></tr>
 
-            <tr><td>Mindestens zwei Ausprägungen<br><ul><li><i>Eine Treatment- und eine Kontrollgruppe
-              </i></li><li><i>In der Testgruppe ist die Einflussgröße vorhanden, 
-                in der Kontrollgruppe nicht</i></li></ul></td></tr>
+  <tr><td>Mindestens zwei Ausprägungen<br>
+                <ul><li><i>Eine Treatment- und eine Kontrollgruppe</i></li>
+                    <li><i>In der Testgruppe ist die Einflussgröße vorhanden, in der Kontrollgruppe nicht</i></li>
+                </ul>
+  </td></tr>
+
+
                 <td>Unbeeinflusste Messung<br><ul><li><i>Werte sollen frei variieren können und 
                   unabhängig von den Durchführungen des Experiments sein</i></li></ul></td>
         </td></tr>
