--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -414,11 +414,11 @@ von diesem Effekt betroffen).</p></li>
   <tr><td><i>Prädiktor</i><br>
               <i>Erklärende Variable</i><br>
               <i>Independent Variable</i><br>
-            </td>
+      </td>
       <td><i>Antwortvariable</i><br>
               <i>Dependent Variable</i><br>
               <i>Response Variable</i><br>
-    </td></tr>
+  </td></tr>
       
   <tr><td>Zu untersuchende Einflussgröße (potentielle Ursache)<br>
                 <ul><li><i>Gruppenbildung</i></li></ul></td>
@@ -426,18 +426,23 @@ von diesem Effekt betroffen).</p></li>
                 <ul><li><i>Wirkung</i></li>
                     <li><i>Effekte</i></li>
                 </ul>
-    </td></tr>
+  </td></tr>
 
-  <tr><td>Mindestens zwei Ausprägungen<br>
-                <ul><li><i>Eine Treatment- und eine Kontrollgruppe</i></li>
-                    <li><i>In der Testgruppe ist die Einflussgröße vorhanden, in der Kontrollgruppe nicht</i></li>
+  <tr><td>Variationen der unabhängigen Variable<br>
+                <ul><li><i>Grunppenbildung</i></li>
+                </ul>
+      </td>
+      <td>Unbeeinflusste Messung<br>
+                <ul><li><i>Werte sollen frei variieren können und unabhängig von den Durchführungen des Experiments sein</i></li>
                 </ul>
   </td></tr>
 
+  <tr><td>Mindestens zwei Ausprägungen<br>
+                <ul><li><i>Eine Treatment- und eine Kontrollgruppe</i></li>
+                    <li><i>In der Treatmentgruppe ist die Einflussgröße vorhanden, in der Kontrollgruppe nicht</i></li>
+                </ul>
+  </td></tr>
 
-                <td>Unbeeinflusste Messung<br><ul><li><i>Werte sollen frei variieren können und 
-                  unabhängig von den Durchführungen des Experiments sein</i></li></ul></td>
-        </td></tr>
     </tbody>
 </table>
 
