--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -244,7 +244,7 @@
     <h2 id="wissenschaftliche-guetekriterien">Wissenschaftliche Gütekriterien</h2>
 
     
-<p> Für Daten (Mess-, Beobachtungsverfahren):</p>
+<h3> Für Daten (Mess-, Beobachtungsverfahren):</h3>
     <dl>
   <dt>Reliabität</dt>
   <dd>Sind die Daten reproduzierbar? Liegen die Werte bei Messwiederholung
@@ -262,7 +262,7 @@
 </dl>
 
 
-<p> Für Effekte (Wirkungsaussagen):</p>
+<h3> Für Effekte (Wirkungsaussagen):</h3>
 <dl>
   <dt>Internale Validität</dt>
   <dd>Können berichtete Effekte eindeutig auf die Untersuchungsbedingungen 
@@ -275,13 +275,13 @@
   </dd>
 </dl>
 
-<p>Internale Validität ist für externale Validität eine notwendige, aber keine hinreichende 
-  Bedingung.
+<p><i>Internale Validität ist für externale Validität eine notwendige, aber keine hinreichende 
+  Bedingung.</i>
 </p>
-<p></p>
+<br>
 
 
-<p> Gütekriterien im Gesamtzusammenhang statistischer Schlussfolgerungen:</p>
+<h3> Gütekriterien im Gesamtzusammenhang statistischer Schlussfolgerungen</h3>
 <p><ul>
 <li>1) <strong>Daten</strong> (n Werte) weisen Reliabilität und Validität auf.</li>
 <li>2) Eine <strong>Stichprobe</strong> (N Studierende der HAW) weist Internale Validität auf.</li>
@@ -291,14 +291,13 @@
 <p>Die Ergebnisse aus 1) können auf die Population aus 4) (Studierende in Deutschland) übertragen werden.</p>
 
 
-<p></p>
-<p>Deckeneffekt:</p>
+<br>>
+<h3>Deckeneffekt:</h3>
 <p>Eine Briefwaage, die maximal 100 Gramm anzeigen kann, liefert über 100 Gramm immer den gleichen Wert.
 </p>
+<br>
 
-
-<p></p>
-<p id="int-valid">Wie erreicht man bei Stichprobengewinnung internale und externale Validität?</p>
+<h3 id="int-valid">Wie erreicht man bei Stichprobengewinnung internale und externale Validität?</h3>
 
 <ul>
 <li>1) Zufallsstichproben (<strong>Random Sampling</strong>) bewirken <strong>globale Repräsentativität</strong>, sodass die 
@@ -311,12 +310,12 @@ Besonderheiten keinen systematischen Einfluss (Alternativerklärung) auf die abh
 von diesem Effekt betroffen).</p></li>
 </ul>
 
-<p>Statistische Schätzverfahren gehen von der Annahme aus, dass Messungen unabhängig voneinander 
-  sind.</p>
+<p><i>Statistische Schätzverfahren gehen von der Annahme aus, dass Messungen unabhängig voneinander 
+  sind.</i></p>
   <p></p>
 
 
-<p>Hierarchie der Evidenzen (höchste Evidenz zuerst):</p>
+<h3>Hierarchie der Evidenzen (höchste Evidenz zuerst):</h3>
 
 <p>
 <table>
@@ -352,7 +351,7 @@ von diesem Effekt betroffen).</p></li>
 <h2 id="wissenschaftliche-methode">Wissenschaftliche Methode</h2>
 
 
-<p>Die Phasen empirischer Forschung (nach Whitehead, 1929)</p>
+<h3>Die Phasen empirischer Forschung (nach Whitehead, 1929)</h3>
 <p><ul>
 <li>1) <strong>Beobachtung</strong>, Phänomene/Realität</li>
 <li>2) <strong>Hypothesenbildung</strong>, Konzeptionellbegriffliche Ebene</li>
@@ -368,8 +367,8 @@ von diesem Effekt betroffen).</p></li>
 
 
 
-<p><strong>Die wissenschaftliche Methode teilt sich auf in zwei Säulen:</strong></p>
-<p></p>
+<h3><strong>Die wissenschaftliche Methode teilt sich auf in zwei Säulen:</strong></h3>
+  <br>>
 <table class="legend-table" style="--key-col: 50%;">
     <thead>
       <tr><th>Empirie</th><th>Logik</th></tr>
@@ -400,8 +399,8 @@ von diesem Effekt betroffen).</p></li>
   Bedingungen erzeugt.</li>
 </ul>
 <p></p>
-<p>Bei einem Experiment gibt es eine abhängige Variable und (mindestens) eine unabhängige 
-  Variable:</p>
+<h3>Bei einem Experiment gibt es eine abhängige Variable und (mindestens) eine unabhängige 
+  Variable:</h3>
 </p>
 <table class="legend-table" style="--key-col: 50%;">
     <thead>
@@ -448,7 +447,7 @@ von diesem Effekt betroffen).</p></li>
 
 
 <p>
-<strong></strong>
+<strong>Experimentelle Designs</strong>
 </p>
 
 
