--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -291,7 +291,7 @@
 <p>Die Ergebnisse aus 1) können auf die Population aus 4) (Studierende in Deutschland) übertragen werden.</p>
 
 
-<br>>
+<br>
 <h3>Deckeneffekt:</h3>
 <p>Eine Briefwaage, die maximal 100 Gramm anzeigen kann, liefert über 100 Gramm immer den gleichen Wert.
 </p>
@@ -368,7 +368,7 @@ von diesem Effekt betroffen).</p></li>
 
 
 <h3><strong>Die wissenschaftliche Methode teilt sich auf in zwei Säulen:</strong></h3>
-  <br>>
+  <br>
 <table class="legend-table" style="--key-col: 50%;">
     <thead>
       <tr><th>Empirie</th><th>Logik</th></tr>
@@ -446,13 +446,26 @@ von diesem Effekt betroffen).</p></li>
 </table>
 
 
-<p>
-<strong>Experimentelle Designs</strong>
-</p>
+<h3><strong>Experimentelle Designs</strong></h3>
 
 
 <p>
-
+<ul>
+  <li>Das experimentelle Design oder Forschungsdesign beschreibt die Struktur der Datenerhebung
+  </li>
+  <li><h3>Ziele sind:</h3>
+    <ol>
+      <li>Kausale Zusammenhänge aufdecken: Ruft eine Änderung der unabhängigen Variable eine Änderung der abhängigen Variable hervor?</li>
+      <li>Alternativerklärungen kontrollieren/ausschließen</li>
+    </ol>
+  </li>
+  <li><h3>Arten von Designs:</h3>
+    <ul>
+      <li><i>Within-Subjects-Design</i> (Innersubjekt-Design): Alle Teilnehmer durchlaufen alle Bedingungen des Experiments. Jede Person dient als ihre eigene Kontrolle.</li>
+      <li><i>Between-Subjects-Design</i> (Zwischensubjekt-Design): Teilnehmer werden in unterschiedliche Gruppen aufgeteilt, wobei jede Gruppe nur einer Bedingung ausgesetzt wird.</li>
+    </ul>
+  </li>
+</ul>
 
 </p>
     
