--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -465,6 +465,9 @@ von diesem Effekt betroffen).</p></li>
       <li><i>Between-Subjects-Design</i> (Zwischensubjekt-Design): Teilnehmer werden in unterschiedliche Gruppen aufgeteilt, wobei jede Gruppe nur einer Bedingung ausgesetzt wird.</li>
     </ul>
   </li>
+  <li><h3>Within-Subjects-Design (Innersubjekt Design) Beispiele:</h3>
+    <
+  </li>
 </ul>
 
 </p>
