Add training shortcuts and save hotkeys

--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -465,8 +465,23 @@ von diesem Effekt betroffen).</p></li>
       <li><i>Between-Subjects-Design</i> (Zwischensubjekt-Design): Teilnehmer werden in unterschiedliche Gruppen aufgeteilt, wobei jede Gruppe nur einer Bedingung ausgesetzt wird.</li>
     </ul>
   </li>
-  <li><h3>Within-Subjects-Design (Innersubjekt Design) Beispiele:</h3>
-    <
+  <li><h3>Within-Subjects-Design (Innersubjekt Design) Beispiele:</h3><br>
+    <table class="legend-table" style="--key-col: 50%;">
+    <thead>
+      <tr><th>Unabhängige Variable (UV)</th>
+        <th>Abhängige Variable (AV)</th></tr>
+    </thead>
+
+    <tbody>
+
+  <tr><td><i>Prädiktor</i><br>
+              <i>Erklärende Variable</i><br>
+              <i>Independent Variable</i><br>
+      </td>
+      <td><i>Antwortvariable</i><br>
+              <i>Dependent Variable</i><br>
+              <i>Response Variable</i><br>
+  </td></tr>
   </li>
 </ul>
 
