--- a/training.html
+++ b/training.html
@@ -178,7 +178,7 @@
       </div>
     </section>
 
-    <p class="training-tip">Shortcut: Taste <code>9</code> oeffnet Training von jeder Seite.</p>
+    <p class="training-tip">Shortcuts: <code>9</code> oeffnet Training von jeder Seite, <code>Shift+S</code> Quick Save, <code>Shift+L</code> Quick Load.</p>
   </main>
   </div>
 
