--- a/white-rabbit.html
+++ b/white-rabbit.html
@@ -186,6 +186,18 @@
         <tr><td><code>4</code></td><td>Musik an/aus</td></tr>
       </tbody>
     </table>
+
+    <h2>Training</h2>
+    <table class="legend-table">
+      <thead>
+        <tr><th>Key</th><th>Aktion</th></tr>
+      </thead>
+      <tbody>
+        <tr><td><code>9</code></td><td>Training oeffnen</td></tr>
+        <tr><td><code>Shift+S</code></td><td>Quick Save (Training)</td></tr>
+        <tr><td><code>Shift+L</code></td><td>Quick Load (Training)</td></tr>
+      </tbody>
+    </table>
   </main>
   </div>
 
