--- a/training.html
+++ b/training.html
@@ -174,6 +174,10 @@
           <div class="training-row">
             <button class="training-btn ghost" id="training-reset" type="button">Reset Save</button>
           </div>
+          <label class="training-toggle">
+            <input type="checkbox" id="training-autoresume">
+            Auto Resume nach Seitenwechsel
+          </label>
         </div>
       </div>
     </section>
