--- a/training.html
+++ b/training.html
@@ -155,6 +155,18 @@
           </div>
         </div>
         <div class="training-group">
+          <div class="training-title">Wave Preview</div>
+          <div class="training-preview" data-preview>Warten...</div>
+        </div>
+        <div class="training-group">
+          <div class="training-title">Map</div>
+          <div class="training-row">
+            <select class="training-select" id="training-map"></select>
+            <button class="training-btn ghost" id="training-map-apply" type="button">Apply</button>
+          </div>
+          <div class="training-note">Wechsel nur ausserhalb einer Welle.</div>
+        </div>
+        <div class="training-group">
           <div class="training-title">Auswahl</div>
           <div class="training-selected" data-selected>Kein Tower</div>
           <div class="training-row">
