--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -465,7 +465,8 @@ von diesem Effekt betroffen).</p></li>
       <li><i>Between-Subjects-Design</i> (Zwischensubjekt-Design): Teilnehmer werden in unterschiedliche Gruppen aufgeteilt, wobei jede Gruppe nur einer Bedingung ausgesetzt wird.</li>
     </ul>
   </li>
-  <li><h3>Within-Subjects-Design (Innersubjekt Design) Beispiele:</h3><br>
+  <li><h3>Within-Subjects-Design (Innersubjekt Design) Beispiele:</h3>
+    <p>
     <table class="legend-table" style="--key-col: 50%;">
     <thead>
       <tr><th>Unabhängige Variable (UV)</th>
@@ -484,6 +485,10 @@ von diesem Effekt betroffen).</p></li>
   </td></tr>
   </li>
 </ul>
+</p>
+</tbody>
+</table>
+
 
 </p>
     
