Enhance training help, tooltips, and campaign

--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -469,7 +469,7 @@ von diesem Effekt betroffen).</p></li>
     <p>
     <table class="legend-table" style="--key-col: 50%;">
     <thead>
-      <tr><th>Unabhängige Variable (UV)</th>
+      <tr><th>One Shot Case Study (OSCS), One-Group Post-Test Only Design</th>
         <th>Abhängige Variable (AV)</th></tr>
     </thead>
 
