Add training SFX, upgrade trees, and campaign UI

--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -468,10 +468,21 @@ von diesem Effekt betroffen).</p></li>
   <li><h3>Within-Subjects-Design (Innersubjekt Design) Beispiele:</h3>
     <p>
     <table class="legend-table" style="--key-col: 50%;">
-    <thead>
-      <tr><th>One Shot Case Study (OSCS), One-Group Post-Test Only Design</th>
-        <th>Abhängige Variable (AV)</th></tr>
-    </thead>
+    <tr>
+      <td>
+          One Shot Case Study (OSCS), One-Group Post-Test Only Design
+      </td>
+      <td>
+          <h3>G  X  O</h3>
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+          
+      </td>
+    </tr>
+
 
     <tbody>
 
