Add sound toggle, campaign rewards, and tower skins

--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -479,10 +479,28 @@ von diesem Effekt betroffen).</p></li>
 
     <tr>
       <td>
-          
+          Eingruppenplan mit Prätests (Baseline)
+      </td>
+      <td>
+          <h3>G  O  O  X  O</h3>
       </td>
     </tr>
 
+    <tr>
+      <td>
+        ABAB-Design <br>
+        <i>ABAB-Versuchsplan, Versuchsplan, bei dem zuerst Verhalten gemessen wird, um einen Standard (baseline) zu erhalten (A), dann ein zweites Mal, nachdem die experimentelle Bedingung zum Tragen gekommen ist (B), dann erneut, nachdem die baseline-Bedingungen wiederhergestellt sind (A), und ein letztes Mal, nachdem wieder die experimentelle Bedingung eingeführt ist (B) (Versuchsplanung).</i>
+      </td>
+      <td>
+          <h3>G  O  X  O  O  X  O</h3>
+      </td>
+    </tr>
+<h3>Legende:</h3>
+    <dl>
+  <dt>O = Messung</dt>
+  <dt>X = Intervention; Ereignis</dt>
+  <dt></dt>
+</dl>
 
     <tbody>
 
