--- a/training.html
+++ b/training.html
@@ -139,6 +139,7 @@
         <button class="training-btn" id="training-start" type="button">Start Wave</button>
         <button class="training-btn ghost" id="training-pause" type="button">Pause</button>
         <button class="training-btn ghost" id="training-help" type="button">Anleitung</button>
+        <button class="training-btn ghost" id="training-sound" type="button" data-tip="Sound an/aus">Sound</button>
         <span class="training-status" data-stat="status">Bereit</span>
       </div>
 
@@ -263,6 +264,7 @@
           <li><code>Shift+S</code> Quick Save</li>
           <li><code>Shift+L</code> Quick Load</li>
         </ul>
+        <p>Sound kann im HUD mit dem Sound-Button stummgeschaltet werden.</p>
       </div>
       <div class="training-help-glow"></div>
     </div>
