Add wave summary, highscores, and branch icons

--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -495,30 +495,15 @@ von diesem Effekt betroffen).</p></li>
           <h3>G  O  X  O  O  X  O</h3>
       </td>
     </tr>
+    </table>
 <h3>Legende:</h3>
-    <dl>
+<dl>
   <dt>O = Messung</dt>
   <dt>X = Intervention; Ereignis</dt>
-  <dt></dt>
+  <dt>G = Gruppe</dt>
 </dl>
 
-    <tbody>
-
-  <tr><td><i>Prädiktor</i><br>
-              <i>Erklärende Variable</i><br>
-              <i>Independent Variable</i><br>
-      </td>
-      <td><i>Antwortvariable</i><br>
-              <i>Dependent Variable</i><br>
-              <i>Response Variable</i><br>
-  </td></tr>
-  </li>
-</ul>
-</p>
-</tbody>
-</table>
-
-
+    
 </p>
     
   </main>
