--- a/training.html
+++ b/training.html
@@ -180,6 +180,7 @@
             <div class="training-campaign-bar">
               <span data-campaign="progress"></span>
             </div>
+            <div class="training-campaign-high" data-campaign="high">Highscore: 0</div>
           </div>
         </div>
         <div class="training-group">
@@ -267,6 +268,19 @@
         <p>Sound kann im HUD mit dem Sound-Button stummgeschaltet werden.</p>
       </div>
       <div class="training-help-glow"></div>
+    </div>
+  </div>
+  <div class="training-summary" id="training-summary" hidden>
+    <div class="training-summary-card">
+      <h2>Wave Report</h2>
+      <div class="training-summary-body">
+        <div data-summary="wave">Welle 0</div>
+        <div data-summary="credits">Credits: 0</div>
+        <div data-summary="lives">Integritaet: 0</div>
+        <div data-summary="kills">Kills: 0</div>
+        <div data-summary="bonus">Bonus: 0</div>
+      </div>
+      <button class="training-btn" id="training-summary-close" type="button">Weiter</button>
     </div>
   </div>
   <div class="training-glitch" id="training-glitch" aria-hidden="true"></div>
